# AppTemplateQt

./: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui.cpp  mainwindow.ui.h
.github/workflows/: build.yaml
applicationstyle/: CMakeLists.txt  applicationstyle.cpp  applicationstyle.h  applicationstyle.json  applicationstyleplugin.cpp  applicationstyleplugin.h
cmake/: ConvertImage.cmake  Deploy.cmake  Options.cmake  Setup.cmake
deploy/android/: AndroidManifest.xml
deploy/darwin/: Info.plist  SetupDMG.applescript  qt.conf
deploy/ios/: Info.plist
deploy/linux/: icon.desktop
deploy/windows/: qt.conf
pch/: CMakeLists.txt  pch.h
resources/translations/: app_en.ts  app_tr.ts
utils/: CMakeLists.txt  signalhandler.cpp  signalhandler.h  utils.cpp  utils.h
